--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,10 +1,10 @@
 .container-card {
-    background-color: rgb(154, 175, 199);
+    background-color: #ffffff;
     border-radius: 5px;
     width: 320px;
     height: 370px;
 
-    box-shadow: 22px 19px 34px -15px rgba(255, 255, 255, 0.5);
+    box-shadow: 22px 19px 34px -15px rgba(0, 0, 0, 0.459);
     transition: 1s;
     transition: transform 0.5s ease-out;
 }
@@ -12,12 +12,14 @@
 .imagen {
     height: 250px;
     width: 320px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     object-fit: cover;
     object-position: left;
-    /* border: 1px solid black */
 }
 
 .container-card:hover {
     transform: scale(1.06);
+}
+.title-font {
+    font-weight: 400;
 }
