--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: #ebebeb;
 }
 
 .container-cards {
@@ -7,7 +7,7 @@ body {
     align-items: center;
     flex-wrap: wrap;
     justify-content: flex-start;
-    gap: 30px;
+    gap: 25px;
     margin-top: 4px;
     margin-left: 65px;
 }
