--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,8 +1,14 @@
-.prueba {
-    display: flex;
-    justify-content: start;
+.nickname {
+    margin-top: 10px;
+    font-size: 13px;
+    font-weight: 700;
 }
-
-.profile-container {
-    border: solid 3px black;
+.email {
+    font-size: 9px;
+}
+.contenedor {
+    border: solid 1px black;
+    border-radius: 70px;
+    max-width: 160px;
+    max-height: 55px;
 }
