--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -1,6 +1,6 @@
 .container-buttons {
     display: flex;
-    justify-content: center;
+    /* justify-content: center;
     align-items: center;
     background-color: #683217;
     width: 250px;
@@ -9,12 +9,12 @@
     border-radius: 50px;
     margin-inline: auto;
     margin-top: 20px;
-    /* From https://css.glass */
+  
     background: rgba(255, 255, 255, 0.27);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(8.8px);
-    -webkit-backdrop-filter: blur(8.8px);
+    -webkit-backdrop-filter: blur(8.8px); */
 }
 
 .container-cards {
@@ -26,25 +26,15 @@
     gap: 35px;
     margin-left: -15px;
 }
-/* .individual {
-  
-    margin-inline: auto;
-  
-    background: rgba(255, 255, 255, 0.62);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8.8px);
-    -webkit-backdrop-filter: blur(8.8px);
-} */
+
 .botonPrevNext {
-    background-color: #eee2e2;
-    border-color: rgb(0, 0, 0);
-    color: rgb(0, 0, 0);
+    background-color: #000000;
+
+    color: rgb(252, 252, 252);
     display: block;
     width: 30px;
     height: 30px;
     border-radius: 50%;
     cursor: pointer;
     margin-inline: auto;
-    box-shadow: 2px 2px 7px -2px black;
 }
