--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -4,8 +4,9 @@
 } */
 
 .nickname {
-    font-size: 13px;
-    font-weight: 700;
+    color: #afacac;
+    font-size: 11px;
+    font-weight: 600;
 }
 .email {
     font-size: 9px;
