--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,40 +1,42 @@
 .container-card {
     background-color: #ffffff;
 
-    border-radius: 20px;
+    border-radius: 4px;
     width: 170px;
-    height: 220px;
-
-    /* box-shadow: 22px 19px 34px -15px rgba(0, 0, 0, 0.459); */
-    -webkit-box-shadow: 6px 4px 0px 0px rgba(171, 196, 194, 1);
-    -moz-box-shadow: 6px 4px 0px 0px rgba(171, 196, 194, 1);
-    box-shadow: 6px 4px 0px 0px rgba(171, 196, 194, 1);
+    height: 215px;
 }
 
 .imagen {
     height: 120px;
     width: 170px;
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 
     /* border-radius: 5px; */
-    /* object-fit: cover; */
+    object-fit: cover;
     object-position: left;
 }
 .buttonclass {
+    display: flex;
+    align-items: center;
+    margin-right: 5px;
+    border-radius: 10px;
+    font-size: 15px;
+    height: 30px;
+    width: 64px;
     color: white;
-    background: rgb(10, 9, 9);
-    background: linear-gradient(
-        180deg,
-        rgba(10, 9, 9, 1) 51%,
-        rgba(172, 86, 39, 1) 87%
-    );
+
+    background: black;
 }
 
 .title-font {
-    font-weight: 400;
+    margin-left: 5px;
+    font-weight: 700;
+    font-size: 12px;
 }
-
-.arhe {
-    background-color: rgb(115, 43, 129);
+.price {
+    margin-left: 5px;
+    margin-top: 3px;
+    font-weight: 500;
+    font-size: 13px;
 }
