--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,16 @@
 .container-card {
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
+
+    background: #00000067;
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10.1px);
+    -webkit-backdrop-filter: blur(10.1px);
 
     border-radius: 4px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
     width: 170px;
     height: 215px;
 }
@@ -11,6 +20,7 @@
     width: 170px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.233);
 
     /* border-radius: 5px; */
     object-fit: cover;
@@ -30,11 +40,13 @@
 }
 
 .title-font {
+    color: white;
     margin-left: 5px;
     font-weight: 700;
     font-size: 12px;
 }
 .price {
+    color: wheat;
     margin-left: 5px;
     margin-top: 3px;
     font-weight: 500;
